--- a/FishBun/build.gradle
+++ b/FishBun/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'com.android.library'
+apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-android'
 apply plugin: 'jacoco-android'
 
 buildscript {
@@ -48,4 +50,9 @@ dependencies {
 
     compileOnly "com.squareup.picasso:picasso:$rootProject.picasso_version"
     compileOnly "com.github.bumptech.glide:glide:$rootProject.glide_version"
+    compile "androidx.core:core-ktx:+"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+}
+repositories {
+    mavenCentral()
 }
