--- a/FishBunDemo/build.gradle
+++ b/FishBunDemo/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-android'
 
 buildscript {
     repositories {
@@ -66,6 +68,8 @@ dependencies {
     implementation "androidx.legacy:legacy-support-v4:1.0.0"
     implementation "com.squareup.picasso:picasso:$rootProject.picasso_version"
     implementation "com.github.bumptech.glide:glide:$rootProject.glide_version"
+    compile "androidx.core:core-ktx:+"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
 
 buildscript {
